Fix button alignment

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -1105,6 +1105,6 @@ input.mobile-facets__checkbox {
   }
 
   .facets-vertical .active-facets__button-remove {
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
   }
 }
